--- a/hugo.toml
+++ b/hugo.toml
@@ -55,7 +55,7 @@ pygmentsCodefencesGuessSyntax = true
   github = "unilsson"
   #gitlab = "username"
   #bitbucket = "username"
-  twitter = "unilsson"
+  #twitter = "unilsson"
   reddit = "unilsson"
   linkedin = "unilsson"
   #xing = "username"
