--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -19,9 +19,10 @@ jobs:
       run: hugo --minify
 
     - name: Deploy
-      uses: SamKirkland/FTP-Deploy-Action@3.0.0
+      uses: SamKirkland/FTP-Deploy-Action@v4.3.5
       with:
-        ftp-server:  ${{ vars.FTP_SERVER }}
-        ftp-username: ${{ secrets.FTP_USER }}
-        ftp-password: ${{ secrets.FTP_ULNI_SE_PASSWORD }}
-        local-dir: public/
+        server:  ${{ vars.FTP_SERVER }}
+        username: ${{ secrets.FTP_USER }}
+        password: ${{ secrets.FTP_ULNI_SE_PASSWORD }}
+        local-dir: ./public/
+        server-dir: ./public/
